# FSyncX

./: CMakeCache.txt.prev  CMakeLists.txt  CMakeLists.txt.user.3c6b22d  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow.ui.autosave  README.md  main.cpp
CONFIG/: CodeConfig.h  ConfigManager.cpp  ConfigManager.h
ChildWindow/: SettingWindow.cpp  SettingWindow.h  SettingWindow.ui
DATA/DATA_Base/: FileBase.cpp  FileBase.h
DATA/DATA_Sync/: FileTransfer.cpp  FileTransfer.h  FileWatcher.cpp  FileWatcher.h
Doc/CodeNotes/: this的代指使用.drawio
Doc/程序架构记录/: 代码重构_22_0518.drawio
Theme/: APPTheme.qrc  BlueSoulDark.qss
UI_Modules/: BasePage.cpp  BasePage.h  CommonHelper.cpp  CommonHelper.h  ContextMenu.cpp  ContextMenu.h  ListenFromDATA.cpp  ListenFromDATA.h  PageManager.cpp  PageManager.h  QHeaders.h  SyncPage.cpp  SyncPage.h  ThemeManager.cpp  ThemeManager.h
icons/: APPicons.qrc  logo.rc
